	PR middle-end/37913 	* tree-cfgcleanup.c (split_bbs_on_noreturn_calls): Only split bbs 	that haven't been removed yet.

* gcc.c-torture/compile/pr37913.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141426 138bc75d-0d04-0410-961f-82ee72b054a4